force-app/main/default/objects/Notion_Sync_Settings__c/Notion_Sync_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global settings for Notion synchronization functionality</description>
    <label>Notion Sync Settings</label>
</CustomObject>