force-app/main/default/objects/Notion_Sync_Settings__c/fields/Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable logging of sync operations to Notion Sync Log object. Default is disabled to save storage.</description>
    <inlineHelpText>When enabled, sync operations will be logged to the Notion Sync Log object. Keep disabled in production to save storage costs.</inlineHelpText>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>