force-app/main/default/objects/Notion_Sync_Settings__c/fields/Enable_Sync_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sync_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, sync operations will create log records in Notion_Sync_Log__c object</description>
    <inlineHelpText>Enable this to track sync operations in the Notion Sync Log object. Disabled by default for performance.</inlineHelpText>
    <label>Enable Sync Logging</label>
    <type>Checkbox</type>
</CustomField>