force-app/main/default/objects/Notion_Sync_Settings__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>Controls the verbosity of logging. ERROR logs only failures, INFO logs successes and failures, DEBUG logs everything including batch processing details.</description>
    <inlineHelpText>ERROR: Only failures | INFO: Successes and failures | DEBUG: Everything including batch details</inlineHelpText>
    <label>Log Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>