force-app/main/default/objects/Notion_Sync_Settings__c/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days to retain sync logs before automatic deletion</description>
    <inlineHelpText>Sync logs older than this many days will be automatically deleted by the cleanup job</inlineHelpText>
    <label>Retention Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>